# otto-voice

./: config.default.yaml  pyproject.toml
src/otto_coms/: cli.py  config.py  pipeline.py  speak_api.py
src/otto_coms/audio/: capture.py
src/otto_coms/buffer/: compose.py
src/otto_coms/commands/: voice_commands.py
src/otto_coms/handlers/: __init__.py  cc_direct.py
src/otto_coms/platform/: audio_feedback.py
src/otto_coms/processing/: wake_word.py
src/otto_coms/tts/: engine.py
tools/: echo_server.py
