[project]
name = "otto-coms"
version = "0.1.0"
description = "Unified cross-platform voice client for Otto — STT, TTS, wake word, compose mode"
requires-python = ">=3.11"
dependencies = [
    "otto-common @ git+https://github.com/ozobmar/otto-common.git",
    "sounddevice>=0.5.1",
    "numpy>=1.26",
    "onnxruntime>=1.17",
    "silero-vad>=5.0",
    "faster-whisper>=1.1.0",
    "ctranslate2<=4.4.0",
    "pyperclip>=1.9",
    "pynput>=1.7",
    "websockets>=13.0",
    "pyyaml>=6.0",
    "setuptools<81",
    "httpx>=0.27",
    "edge-tts>=6.1",
    "miniaudio>=1.59",
]

[project.optional-dependencies]
gpu = [
    "torch>=2.0",
]
wake-word = [
    "openwakeword>=0.4.0,<0.6.0",
]
ui = [
    "textual>=0.47",
]
speak-api = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]
all = [
    "otto-coms[gpu,wake-word,ui,speak-api,dev]",
]

[project.scripts]
otto-coms = "otto_coms.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/otto_coms"]
